fix the size of the graph
the graph on the website was too squish together and was not visible. Redid the sizing of the graph on the css side

--- a/templates/styles.css
+++ b/templates/styles.css
@@ -14,7 +14,7 @@ body{
     align-items: center; /* Center content vertically */
 }
 .chart{
-	width: 100%;
+	width: 80%;
     height: 100vh; /* Full viewport height */
 	padding: 50px;
 	margin: 0 auto;
